sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: ';' expected but 'while' found.
    } while(swapped)
      ^AlgBubbleSort1:14: error: 'while' expected but '}' found.
} 
^